--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,11 @@
-streamlit>=1.28.0
-pandas>=2.0.0
-numpy>=1.24.0
-plotly>=5.17.0
-requests>=2.31.0
-geopandas>=0.14.0
-folium>=0.15.0
-streamlit-folium>=0.15.0
-openpyxl>=3.1.0
-xlrd>=2.0.0
-cachetools>=5.3.0
-python-dotenv>=1.0.0
-pytz>=2023.3
-statsmodels>=0.14.0
-scikit-learn>=1.3.0
-matplotlib>=3.7.0
-seaborn>=0.12.0
-pillow>=10.0.0
+streamlit==1.28.0
+pandas==2.0.3
+numpy==1.24.3
+plotly==5.17.0
+folium==0.14.0
+streamlit-folium==0.15.0
+geopandas==0.14.0
+matplotlib==3.7.2
+seaborn==0.12.2
+scikit-learn==1.3.0
+pillow==10.0.0
