--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-streamlit==1.28.0
-pandas==2.0.3
-numpy==1.24.3
-plotly==5.17.0
-folium==0.14.0
-streamlit-folium==0.15.0
-geopandas==0.14.0
-matplotlib==3.7.2
-seaborn==0.12.2
-scikit-learn==1.3.0
-pillow==10.0.0
+# Updated requirements.txt - Compatible with Python 3.13
+streamlit==1.31.0
+pandas==2.2.3
+numpy==1.26.4
+plotly==5.22.0
+folium==0.17.0
+streamlit-folium==0.22.0
+geopandas==0.14.4
+matplotlib==3.9.2
+seaborn==0.13.2
+scikit-learn==1.5.1
+pillow==10.4.0
